frb_example/pure_dart_multi/rust/c_output_path/c_output_2.h

typedef struct _Dart_Handle* Dart_Handle;
typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Empty {

} wire_SharedComplexEnumInAllBlocks_Empty;
typedef struct wire_SharedComplexEnumInAllBlocks_Primitives {
  int32_t int32;
  double float64;
  bool boolean;
} wire_SharedComplexEnumInAllBlocks_Primitives;
typedef struct wire_SharedComplexEnumInAllBlocks_Nested {
  struct wire_SharedComplexEnumInAllBlocks *field0;
} wire_SharedComplexEnumInAllBlocks_Nested;
typedef struct wire_SharedComplexEnumInAllBlocks_Optional {
  int32_t *field0;
  struct wire_uint_8_list *field1;
} wire_SharedComplexEnumInAllBlocks_Optional;
typedef struct wire_SharedComplexEnumInAllBlocks_Buffer {
  struct wire_float_32_list *field0;
} wire_SharedComplexEnumInAllBlocks_Buffer;
typedef struct wire_SharedComplexEnumInAllBlocks_Enums {
  int32_t field0;
} wire_SharedComplexEnumInAllBlocks_Enums;
typedef struct wire_SharedComplexEnumInAllBlocks_BytesArray {
  struct wire_uint_8_list *field0;
} wire_SharedComplexEnumInAllBlocks_BytesArray;
typedef union SharedComplexEnumInAllBlocksKind {
  struct wire_SharedComplexEnumInAllBlocks_Empty *Empty;
  struct wire_SharedComplexEnumInAllBlocks_Primitives *Primitives;
  struct wire_SharedComplexEnumInAllBlocks_Nested *Nested;
  struct wire_SharedComplexEnumInAllBlocks_Optional *Optional;
  struct wire_SharedComplexEnumInAllBlocks_Buffer *Buffer;
  struct wire_SharedComplexEnumInAllBlocks_Enums *Enums;
  struct wire_SharedComplexEnumInAllBlocks_BytesArray *BytesArray;
} SharedComplexEnumInAllBlocksKind;
typedef struct wire_list_shared_complex_enum_in_all_blocks {
  struct wire_SharedComplexEnumInAllBlocks *ptr;
  int32_t len;
} wire_list_shared_complex_enum_in_all_blocks;
typedef struct wire_SharedStructInAllBlocks {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
  struct wire_list_shared_complex_enum_in_all_blocks *enum_list;
} wire_SharedStructInAllBlocks;
typedef struct wire_SharedStructInBlock1And2 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock1And2;
typedef struct wire_SharedStructInBlock2And3 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock2And3;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_StructOnlyForBlock1 {
  int8_t *id;
  double *num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock1;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Primitives(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Nested(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Optional(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Buffer(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Enums(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_BytesArray(void);
void free_WireSyncReturn(WireSyncReturn ptr);
void wire_test_method__method__StructOnlyForBlock1(int64_t port_,
                                                   struct wire_StructOnlyForBlock1 *that,
                                                   struct wire_uint_8_list *message,
                                                   uint16_t num);
void wire_test_static_method__static_method__StructOnlyForBlock1(int64_t port_,
                                                                 struct wire_uint_8_list *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_test_inbuilt_type_in_block_2(int64_t port_, int32_t a, float b);
void wire_test_string_in_block_2(int64_t port_, struct wire_uint_8_list *s, uint64_t i);
void wire_test_all_shared_struct_in_block_2(int64_t port_,
                                            struct wire_SharedStructInAllBlocks *custom,
                                            struct wire_uint_8_list *s,
                                            int32_t i);
WireSyncReturn wire_test_all_shared_struct_in_sync_in_block_2(struct wire_SharedStructInAllBlocks *custom,
                                                              struct wire_uint_8_list *s,
                                                              int32_t i);
void wire_test_shared_struct_in_block_2_for_1_and_2(int64_t port_,
                                                    struct wire_SharedStructInBlock1And2 *custom,
                                                    struct wire_uint_8_list *s,
                                                    int32_t i);
void wire_test_cross_shared_struct_in_block_2_for_1_and_2(int64_t port_,
                                                          struct wire_uint_8_list *name);
void wire_test_shared_struct_in_block_2_for_2_and_3(int64_t port_,
                                                    struct wire_SharedStructInBlock2And3 *custom,
                                                    struct wire_uint_8_list *s,
                                                    int32_t i);