frb_example/pure_dart_multi/dart/lib/bridge_generated_api_block_2.io.dart


  late final _inflate_SharedComplexEnumInAllBlocks_PrimitivesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Primitives');
  late final _inflate_SharedComplexEnumInAllBlocks_Primitives = _inflate_SharedComplexEnumInAllBlocks_PrimitivesPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Nested() {
    return _inflate_SharedComplexEnumInAllBlocks_Nested();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_NestedPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Nested');
  late final _inflate_SharedComplexEnumInAllBlocks_Nested = _inflate_SharedComplexEnumInAllBlocks_NestedPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Optional() {
    return _inflate_SharedComplexEnumInAllBlocks_Optional();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_OptionalPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Optional');
  late final _inflate_SharedComplexEnumInAllBlocks_Optional = _inflate_SharedComplexEnumInAllBlocks_OptionalPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Buffer() {
    return _inflate_SharedComplexEnumInAllBlocks_Buffer();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_BufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Buffer');
  late final _inflate_SharedComplexEnumInAllBlocks_Buffer = _inflate_SharedComplexEnumInAllBlocks_BufferPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Enums() {
    return _inflate_SharedComplexEnumInAllBlocks_Enums();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_EnumsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Enums');
  late final _inflate_SharedComplexEnumInAllBlocks_Enums = _inflate_SharedComplexEnumInAllBlocks_EnumsPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_BytesArray() {
    return _inflate_SharedComplexEnumInAllBlocks_BytesArray();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_BytesArrayPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_BytesArray');
  late final _inflate_SharedComplexEnumInAllBlocks_BytesArray = _inflate_SharedComplexEnumInAllBlocks_BytesArrayPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>('free_WireSyncReturn');
  late final _free_WireSyncReturn = _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();

  void wire_test_method__method__StructOnlyForBlock1(
    int port_,
    ffi.Pointer<wire_StructOnlyForBlock1> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__StructOnlyForBlock1(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__StructOnlyForBlock1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_StructOnlyForBlock1>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint16)>>('wire_test_method__method__StructOnlyForBlock1');
  late final _wire_test_method__method__StructOnlyForBlock1 = _wire_test_method__method__StructOnlyForBlock1Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_StructOnlyForBlock1>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_static_method__static_method__StructOnlyForBlock1(
    int port_,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_static_method__static_method__StructOnlyForBlock1(
      port_,
      message,
    );
  }

  late final _wire_test_static_method__static_method__StructOnlyForBlock1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_static_method__static_method__StructOnlyForBlock1');
  late final _wire_test_static_method__static_method__StructOnlyForBlock1 =
      _wire_test_static_method__static_method__StructOnlyForBlock1Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>('store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr.asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>('get_dart_object');
  late final _get_dart_object = _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>('drop_dart_object');
  late final _drop_dart_object = _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr = _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>('new_dart_opaque');
  late final _new_dart_opaque = _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>('init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_test_inbuilt_type_in_block_2(
    int port_,
    int a,
    double b,
  ) {
    return _wire_test_inbuilt_type_in_block_2(
      port_,
      a,
      b,
    );
  }

  late final _wire_test_inbuilt_type_in_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32, ffi.Float)>>(
          'wire_test_inbuilt_type_in_block_2');
  late final _wire_test_inbuilt_type_in_block_2 =
      _wire_test_inbuilt_type_in_block_2Ptr.asFunction<void Function(int, int, double)>();

  void wire_test_string_in_block_2(
    int port_,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_string_in_block_2(
      port_,
      s,
      i,
    );
  }

  late final _wire_test_string_in_block_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>, ffi.Uint64)>>(
          'wire_test_string_in_block_2');
  late final _wire_test_string_in_block_2 =
      _wire_test_string_in_block_2Ptr.asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_all_shared_struct_in_block_2(
    int port_,
    ffi.Pointer<wire_SharedStructInAllBlocks> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_all_shared_struct_in_block_2(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_all_shared_struct_in_block_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int32)>>('wire_test_all_shared_struct_in_block_2');
  late final _wire_test_all_shared_struct_in_block_2 = _wire_test_all_shared_struct_in_block_2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>, int)>();

  WireSyncReturn wire_test_all_shared_struct_in_sync_in_block_2(
    ffi.Pointer<wire_SharedStructInAllBlocks> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_all_shared_struct_in_sync_in_block_2(
      custom,
      s,
      i,
    );
  }

  late final _wire_test_all_shared_struct_in_sync_in_block_2Ptr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int32)>>('wire_test_all_shared_struct_in_sync_in_block_2');
  late final _wire_test_all_shared_struct_in_sync_in_block_2 =
      _wire_test_all_shared_struct_in_sync_in_block_2Ptr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_shared_struct_in_block_2_for_1_and_2(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock1And2> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_shared_struct_in_block_2_for_1_and_2(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_shared_struct_in_block_2_for_1_and_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int32)>>('wire_test_shared_struct_in_block_2_for_1_and_2');
  late final _wire_test_shared_struct_in_block_2_for_1_and_2 = _wire_test_shared_struct_in_block_2_for_1_and_2Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_cross_shared_struct_in_block_2_for_1_and_2(
    int port_,
    ffi.Pointer<wire_uint_8_list> name,
  ) {
    return _wire_test_cross_shared_struct_in_block_2_for_1_and_2(
      port_,
      name,
    );
  }

  late final _wire_test_cross_shared_struct_in_block_2_for_1_and_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_cross_shared_struct_in_block_2_for_1_and_2');
  late final _wire_test_cross_shared_struct_in_block_2_for_1_and_2 =
      _wire_test_cross_shared_struct_in_block_2_for_1_and_2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_shared_struct_in_block_2_for_2_and_3(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock2And3> custom,
    ffi.Pointer<wire_uint_8_list> s,
    int i,
  ) {
    return _wire_test_shared_struct_in_block_2_for_2_and_3(
      port_,
      custom,
      s,
      i,
    );
  }

  late final _wire_test_shared_struct_in_block_2_for_2_and_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>,
              ffi.Int32)>>('wire_test_shared_struct_in_block_2_for_2_and_3');
  late final _wire_test_shared_struct_in_block_2_for_2_and_3 = _wire_test_shared_struct_in_block_2_for_2_and_3Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>, int)>();
